tests/errors/list_type_mismatch_modulo.dang
# This should fail: mixing String and Int lists in modulo
let result = [] % ["foo"] % [3]
